# birdcamgrabber

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  config.yaml.example  docker-compose.yml  pyproject.toml
docs/: birdfy-tuya-findings.md
scripts/: test_battery.py  test_battery2.py  test_battery3.py  test_birdvision_upload.py  test_capture.py  test_cloud_media.py  test_cloud_media2.py  test_full_capture.py  test_grab_frame.py  test_mqtt_listener.py  test_new_apis.py  test_poll_events.py  test_tuya_connection.py
src/birdcamgrabber/: __main__.py  birdvision_client.py  capture.py  config.py  gallery.py  poller.py  scheduler.py  tuya_api.py  tuya_listener.py
